feat(RacingCarController): 자동차 이름이 빈칸으로 입력됐을 때 예외 처리